# codescribe

./: .gitignore  AGENTS.md  README.md  codescribe-agent.js  codescribe-agent.py  package.json  pyproject.toml
codescribe/: __init__.py  __main__.py  agent.py
test/: test-2025-06-08.txt
