[project]
name = "codescribe"
version = "0.1.0"
description = "CodeScribe is a lightweight journaling agent that lets developers log notes, thoughts, and annotations directly from their coding workflow using natural language."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.79.0",
    "python-dotenv>=1.1.0",
    "rich>=13.7.0",
    "markdown>=3.5.0",
    "mcp>=1.9.3",
]

[project.scripts]
codescribe = "codescribe.__main__:main"

[tool.setuptools]
packages = ["codescribe"]  

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
